Logo #38 - Forgot to commit the SVG file and corrected spacing

--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -364,7 +364,7 @@ form input[type="text"], form input[type="email"], form input[type="password"] {
   .menubar .logo img {
     width: 40px;
     margin-right: 15px;
-    vertical-align: text-top; }
+    vertical-align: sub; }
   .menubar .logo a {
     color: #0f0f0f;
     text-decoration: none; }
