--- a/web/resources/scss/_menubar.scss
+++ b/web/resources/scss/_menubar.scss
@@ -18,7 +18,7 @@
 	img {
 		width: 40px;
 		margin-right: 15px;
-		vertical-align: text-top;
+		vertical-align: sub;
 	}
 
 	a {
